--- a/lib/eChronicler_web/templates/page/index.html.heex
+++ b/lib/eChronicler_web/templates/page/index.html.heex
@@ -1,6 +1,6 @@
 <section class="phx-hero">
-  <h1><%= gettext "Welcome to %{name}!", name: "Phoenix" %></h1>
-  <p>Peace of mind from prototype to production</p>
+  <h1><%= gettext "Welcome to %{name}!", name: "E-Chronicler" %></h1>
+  <p><strike> The best<strike>  <strike> a pretty good <strike>  a journal app </p>
 </section>
 
 <section class="row">
