Fix typo on front page

--- a/lib/eChronicler_web/templates/page/index.html.heex
+++ b/lib/eChronicler_web/templates/page/index.html.heex
@@ -1,6 +1,6 @@
 <section class="phx-hero">
   <h1><%= gettext "Welcome to %{name}!", name: "E-Chronicler" %></h1>
-  <p><strike> The best<strike>  <strike> a pretty good <strike>  a journal app </p>
+  <p><strike>"The Best Journal App"</strike> <br><br> <strike> "A pretty good Journal App"</strike> <br><br> "A Journal App" </p>
 </section>
 
 <section class="row">
