Add database migration

--- a/lib/eChronicler_web/templates/hello/index.html.heex
+++ b/lib/eChronicler_web/templates/hello/index.html.heex
@@ -1,3 +1,13 @@
 <div class="phx-hero">
-  <h2>Hello World, from Phoenix! PLEASE WORK!</h2>
+  <h2>Enter your journal entry.</h2>
+
+    <form>
+      <label for="title">Title:</label><br>
+  <input type="text" id="title" name="title"><br>
+  <label for="author">Author:</label><br>
+  <input type="text" id="author" name="author">
+    <label for="Entry">Entry:</label><br>
+  <textarea type="text" id="entry" name="entry"></textarea>
+  <input type="submit" value="Submit">
+    </form>
 </div>
