--- a/lib/eChronicler_web/templates/journal_entry/index.html.heex
+++ b/lib/eChronicler_web/templates/journal_entry/index.html.heex
@@ -1,5 +1,7 @@
 <h1>Journal Entries Page</h1>
 
+<a href="/post"><button id="make-post">Write Post</button></a>
+
 <div>
  
     <%= for journal_entry <- @journal_entries do %>
