--- a/lib/eChronicler_web/templates/journal_entry/index.html.heex
+++ b/lib/eChronicler_web/templates/journal_entry/index.html.heex
@@ -6,8 +6,8 @@
       <div id="entry">
         <h3>Title: <%= journal_entry.title %></h3>
         Author: <%= journal_entry.author %> <br>
-        Published: <%= journal_entry |> EChronicler.EChronicler.JournalEntry.format_datetime() %> <br>
-        Entry: <%= journal_entry.entry |> EChronicler.EChronicler.JournalEntry.truncate_journal_entry_text() %>
+        Published: <%= journal_entry |> EChronicler.Models.JournalEntry.format_datetime() %> <br>
+        Entry: <%= journal_entry.entry |> EChronicler.Models.JournalEntry.truncate_journal_entry_text() %>
       </div>
       <hr>
     <% end %>
