--- a/lib/e_chronicler_web/templates/journal_entry/index.html.heex
+++ b/lib/e_chronicler_web/templates/journal_entry/index.html.heex
@@ -1,10 +1,10 @@
 <h1>Journal Entries Page</h1>
 
 <div>
- 
+ <a href="/post">New post</a>
     <%= for journal_entry <- @journal_entries do %>
       <div id="entry">
-        <h3>Title: <%= journal_entry.title %></h3>
+        <a href=""> <h3>Title: <%= journal_entry.title %></h3></a>
         Author: <%= journal_entry.author %> <br>
         Published: <%= journal_entry |> EChronicler.Models.JournalEntry.format_datetime() %> <br>
         Entry: <%= journal_entry.entry |> EChronicler.Models.JournalEntry.truncate_journal_entry_text() %>
