--- a/lib/e_chronicler_web/templates/journal_entry/index.html.heex
+++ b/lib/e_chronicler_web/templates/journal_entry/index.html.heex
@@ -1,10 +1,9 @@
 <h1>Journal Entries Page</h1>
 
 <div>
- <a href="/post">New post</a>
     <%= for journal_entry <- @journal_entries do %>
       <div id="entry">
-        <a href="/{journal_entry.id}"> <h3>Title: <%= journal_entry.title %></h3></a>
+       <h3> <%= link journal_entry.title, to: "/#{journal_entry.id}" %> </h3>
         Author: <%= journal_entry.author %> <br>
         Published: <%= journal_entry |> EChronicler.Models.JournalEntry.format_datetime() %> <br>
         Entry: <%= journal_entry.entry |> EChronicler.Models.JournalEntry.truncate_journal_entry_text() %>
