--- a/lib/eChronicler_web/templates/journal_entry/index.html.heex
+++ b/lib/eChronicler_web/templates/journal_entry/index.html.heex
@@ -1,10 +1,10 @@
-<h1>Journal Entries Page</h1>
+<h1 id="title">Journal Entries Page</h1>
 
 <div>
  
     <%= for journal_entry <- @journal_entries do %>
       <div id="entry">
-        <h3>Title: <%= journal_entry.title %></h3>
+        <h3 id="title">Title: <%= journal_entry.title %></h3>
         Author: <%= journal_entry.author %> <br>
         Published: <%= journal_entry |> EChronicler.EChronicler.JournalEntry.format_datetime() %> <br>
         Entry: <%= journal_entry.entry |> EChronicler.EChronicler.JournalEntry.truncate_journal_entry_text() %>
