--- a/lib/e_chronicler_web/templates/journal_entry/show.html.heex
+++ b/lib/e_chronicler_web/templates/journal_entry/show.html.heex
@@ -2,11 +2,12 @@
 
 <div>
       <div id="entry">
-        <h3>Title: <%= @entry.title %></h3>
+        <h3 id="title"> <%= @entry.title %></h3>
         Author: <%= @entry.author %> <br>
-        Published: <%= @entry |> EChronicler.Models.JournalEntry.format_datetime() %> <br>
-        Entry: <%= @entry.entry |> EChronicler.Models.JournalEntry.truncate_journal_entry_text() %>
+        Published: <%= @entry |> EChronicler.Models.JournalEntry.format_datetime() %> 
+        <hr id="subtle-hr">
+         <%= @entry.entry %>
       </div>
-      <hr>
+      <hr id="fancy-hr">
 
 </div>
