--- a/lib/e_chronicler_web/templates/journal_entry/index.html.heex
+++ b/lib/e_chronicler_web/templates/journal_entry/index.html.heex
@@ -1,15 +1,14 @@
 <h1 id="title">Journal Entries Page</h1>
 
-<div>
+<main>
     <%= for journal_entry <- @journal_entries do %>
-      <div id="entry">
+      <article id="entry">
        <h3 id="title"> <%= link journal_entry.title, to: "/#{journal_entry.id}" %> </h3>
         Author: <%= journal_entry.author %> <br>
         Published: <%= journal_entry |> EChronicler.Models.JournalEntry.format_datetime() %> 
-        <hr id="subtle-hr">
+        <hr id="title-body-divider">
          <%= journal_entry.entry |> EChronicler.Models.JournalEntry.truncate_journal_entry_text() %>
-      </div>
-      <hr id="fancy-hr">
+      </article>
+      <hr id="dotted-post-divider"">
     <% end %>
-
-</div>
+</main>
