--- a/lib/e_chronicler_web/templates/journal_entry/show.html.heex
+++ b/lib/e_chronicler_web/templates/journal_entry/show.html.heex
@@ -1,8 +1,10 @@
 <main>
       <article id="entry">
         <h3 id="title"> <%= @entry.title %></h3>
+        <div id="metadata">
         Author: <%= @entry.author %> <br>
         Published: <%= @entry |> EChronicler.Models.JournalEntry.format_datetime() %> 
+        </div>
         <hr id="title-body-divider">
          <%= @entry.entry %>
       </article>
