--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -77,6 +77,10 @@ a {
    color: #1d3557;
 }
 
+#entry-text {
+  white-space: pre-line;
+}
+
 #dotted-post-divider {
    border-top: 20px dotted #457b9d;
 }
