--- a/lib/e_chronicler_web/templates/journal_entry/index.html.heex
+++ b/lib/e_chronicler_web/templates/journal_entry/index.html.heex
@@ -9,7 +9,7 @@
         Published: <%= journal_entry |> EChronicler.Models.JournalEntry.format_datetime() %> 
         </div>
         <hr id="title-body-divider">
-         <%= journal_entry.entry |> EChronicler.Models.JournalEntry.truncate_journal_entry_text() %>
+         <p id="entry-text"><%= journal_entry.entry |> EChronicler.Models.JournalEntry.truncate_journal_entry_text() %></p>
       </article>
       <hr id="dotted-post-divider"">
     <% end %>
