--- a/lib/e_chronicler_web/templates/journal_entry/index.html.heex
+++ b/lib/e_chronicler_web/templates/journal_entry/index.html.heex
@@ -1,9 +1,9 @@
 <h1 id="title">Journal Entries Page</h1>
-
+<a href="/new">New Post</a>
 <main>
     <%= for journal_entry <- @journal_entries do %>
       <article id="entry">
-       <h3 id="title"> <%= link journal_entry.title, to: "/#{journal_entry.id}" %> </h3>
+       <h3 id="title"> <%= link journal_entry.title, to: "/post/#{journal_entry.id}" %> </h3>
        <div id="metadata">
         Author: <%= journal_entry.author %> <br>
         Published: <%= journal_entry |> EChronicler.Models.JournalEntry.format_datetime() %> 
