--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,3 @@
-
 /* General style */
 h1 {
   font-size: 3.6rem;
@@ -46,6 +45,16 @@ pre {
 
 body {
    font-family: "Gill Sans", sans-serif;
+}
+
+button {
+   background-color: #1d3557;
+   color: white;
+   font-family: "Gill Sans", sans-serif;
+}
+
+button:hover {
+   background-color: #457b9d;
 }
 
 .container {
