--- a/lib/e_chronicler_web/templates/journal_entry/new.html.heex
+++ b/lib/e_chronicler_web/templates/journal_entry/new.html.heex
@@ -2,3 +2,5 @@
 
 
 <%= render "form.html", Map.put(assigns, :action, Routes.journal_entry_path(@conn, :create)) %>
+
+<hr id="dotted-post-divider">
