--- a/lib/e_chronicler_web/templates/journal_entry/index.html.heex
+++ b/lib/e_chronicler_web/templates/journal_entry/index.html.heex
@@ -1,5 +1,5 @@
 <h1 id="title">Journal Entries Page</h1>
-<a href="/new">New Post</a>
+<a href="journal_entry/new">New Post</a>
 <main>
     <%= for journal_entry <- @journal_entries do %>
       <article id="entry">
