Add edit button to pages

--- a/lib/e_chronicler_web/templates/journal_entry/index.html.heex
+++ b/lib/e_chronicler_web/templates/journal_entry/index.html.heex
@@ -11,6 +11,9 @@
        <div id="metadata">
         Author: <%= journal_entry.author %> <br>
         Published: <%= journal_entry |> EChronicler.Models.JournalEntry.format_datetime() %> 
+        <%= if journal_entry.inserted_at != journal_entry.updated_at do %>
+       <br> Updated On: <%= journal_entry.inserted_at %> 
+        <% end %>
         </div>
         <hr id="title-body-divider">
          <p id="entry-text"><%= journal_entry.entry |> EChronicler.Models.JournalEntry.truncate_journal_entry_text() %></p>
