add button to edit page

--- a/lib/e_chronicler_web/templates/journal_entry/show.html.heex
+++ b/lib/e_chronicler_web/templates/journal_entry/show.html.heex
@@ -13,5 +13,7 @@
       </article>
       <hr id="dotted-post-divider">
 
-      <%= link "Edit", to: Routes.journal_entry_path(@conn, :edit, @entry) %>
+      <button style="color: white;"><%= link "Edit", to: Routes.journal_entry_path(@conn, :edit, @entry ) %>
+</button>
+
 </main>
