Style button correctly

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -56,6 +56,10 @@ button {
 button:hover {
    background-color: #457b9d;
 }
+button a {
+   color:white;
+   text-decoration: none;
+}
 
 .container {
    margin: 0 auto;
