Changed Updated On to Updated in posts

--- a/lib/e_chronicler_web/templates/journal_entry/index.html.heex
+++ b/lib/e_chronicler_web/templates/journal_entry/index.html.heex
@@ -12,7 +12,7 @@
         Author: <%= journal_entry.author %> <br>
         Published: <%= journal_entry.inserted_at |> EChronicler.Models.JournalEntry.format_datetime() %> 
         <%= if journal_entry.inserted_at != journal_entry.updated_at do %>
-       <br> Updated On: <%= journal_entry.updated_at |> EChronicler.Models.JournalEntry.format_datetime() %>
+       <br> Updated: <%= journal_entry.updated_at |> EChronicler.Models.JournalEntry.format_datetime() %>
         <% end %>
         </div>
         <hr id="title-body-divider">
