--- a/lib/e_chronicler_web/templates/journal_entry/show.html.heex
+++ b/lib/e_chronicler_web/templates/journal_entry/show.html.heex
@@ -6,7 +6,7 @@
         Published: <%= @entry.inserted_at |> EChronicler.Models.JournalEntry.format_datetime() %> 
         </div>
         <%= if @entry.inserted_at != @entry.updated_at do %>
-        Updated On: <%= @entry.updated_at |> EChronicler.Models.JournalEntry.format_datetime() %> 
+        Updated: <%= @entry.updated_at |> EChronicler.Models.JournalEntry.format_datetime() %> 
         <% end %>
         <hr id="title-body-divider">
         <p id="entry-text"> <%= @entry.entry %> </p>
