--- a/lib/e_chronicler_web/templates/journal_entry/show.html.heex
+++ b/lib/e_chronicler_web/templates/journal_entry/show.html.heex
@@ -4,16 +4,16 @@
         <div id="metadata">
         Author: <%= @entry.author %> <br>
         Published: <%= @entry.inserted_at |> EChronicler.Models.JournalEntry.format_datetime() %> 
-        </div>
         <%= if @entry.inserted_at != @entry.updated_at do %>
-        Updated: <%= @entry.updated_at |> EChronicler.Models.JournalEntry.format_datetime() %> 
+          <br>Updated: <%= @entry.updated_at |> EChronicler.Models.JournalEntry.format_datetime() %> 
         <% end %>
+        </div>
         <hr id="title-body-divider">
         <p id="entry-text"> <%= @entry.entry %> </p>
       </article>
       <hr id="dotted-post-divider">
 
-      <button style="color: white;"><%= link "Edit", to: Routes.journal_entry_path(@conn, :edit, @entry ) %>
-</button>
-
+    <button style="color: white;"><%= link "Edit", to: Routes.journal_entry_path(@conn, :edit, @entry ) %></button>
+    <br>
+    <button style="color: white;"><%= link "Home", to: Routes.journal_entry_path(@conn, :index) %></button>
 </main>
