--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -62,6 +62,10 @@ button a {
    text-decoration: none;
 }
 
+#delete-button {
+   background-color:#8B0000;
+}
+
 .container {
    margin: 0 auto;
    max-width: 80.0rem;
